...

    <!--Position Activity/Fragment Strings-->
    <string name="position_type_text">Position type: </string>
    <string name="position_status_text">Status: </string>
    <string name="position_contacts_text">Contacts</string>
    <string name="position_next_steps_label">Next Steps</string>
    <string name="add_new_event_button">Add new event</string>


    <!-- EnterEvents Activity/Fragment String -->
    <string name="event_title">Event</string>
    <string name="event_name_label">Event Name</string>
    <string name="event_name_hint">Enter Event Name</string>
    <string name="event_location_label">Location</string>
    <string name="event_location_hint">Enter Location</string>
    <string name="event_date_label">Date: </string>
    <string name="event_date_button">Pick Date</string>
    <string name="event_time_label">Time: </string>
    <string name="event_time_button">Pick Time</string>

    <string name="event_type_label">Type: </string>
    <string-array name="event_type_array">
        <item>Interview</item>
        <item>Email</item>
        <item>Deadline</item>
...
        <item>10 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
    </string-array>

    <!-- List of Companies, Positions, and Events Strings -->
    <string name="list_all">All</string>

    <string name="company_list_label">Companies</string>
    <string name="current_companies">Current</string>

    <string name="position_list_label">Positions</string>
    <string name="events_list_label">Events</string>

    <string name="event_interview_label">Interview</string>
    <string name="event_email_label">Email</string>
    <string name="event_deadline_label">Deadline</string>


    <!--Home Activity Strings-->
    <string name="home_title">Welcome!</string>
    <string name="create_position_label">Create New Position</string>
    <string name="manage_label">Manage</string>
...
    <string name="settings_title">Settings</string>
    <string name="notifications_label">Notifications</string>
    <string name="notifications_onOff_label">ON/OFF</string>
    <string name="interviews_label">Upcoming Interviews</string>
    <string name="emails_label">Pending Emails</string>
    <string name="deadline_label">Deadlines</string>
    <string name="status_interviewing">Interviewing</string>
    <string name="status_searching">Searching</string>
    <string name="status_not_searching">Not Searching</string>

    <string name="positions_todo">To Do</string>
    <string name="positions_ongoing">Ongoing</string>
    <string name="positions_done">Done</string>

    <string name="event_list_label">Events</string>

    <string name="add_new_button">Add new</string>

    <!-- Company Activity/Fragment Strings -->
    <string name="company_title">Company</string>
    <string name="company_name">Company Name</string>
    <string name="company_location">Location</string>
    <string name="company_description">Description</string>

</resources>

