...
        android:layout_height="wrap_content"
        android:text="@string/status_label"
        android:textSize="20sp"
        android:textColor="@color/colorAccent2"/>

    <RadioGroup
        android:id="@+id/settings_status_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/settings_status_interviewing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_interviewing"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/settings_status_searching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_searching"/>
        <RadioButton
            android:id="@+id/settings_status_not_searching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_not_searching"/>
    </RadioGroup>

    <!--&lt;!&ndash;Notifications ON/OFF&ndash;&gt;-->
...
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/notifications_onOff_label"-->
            <!--android:layout_marginLeft="120dp"-->
            <!--android:layout_marginStart="120dp"/>-->

        <!--<Switch-->
            <!--android:id="@+id/settings_notification_switch"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:checked="true"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginStart="5dp"/>-->

    <!--</LinearLayout>-->

    <!--&lt;!&ndash;Type of Notifications&ndash;&gt;-->
    <!--<CheckBox android:id="@+id/settings_up_interviews"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/interviews_label"-->
        <!--android:checked="true"/>-->

    <!--<CheckBox android:id="@+id/settings_emails"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/emails_label"-->
        <!--android:checked="true"/>-->

    <!--<CheckBox android:id="@+id/settings_deadlines"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/deadline_label"-->
        <!--android:checked="true"-->
        <!--android:layout_marginBottom="10dp"/>-->

...
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/settings_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:background="@color/colorWhite"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/settings_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:background="@color/colorWhite"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"/>
...
