...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/position_label"
            android:textColor="@color/colorAccent3"/>

        <EditText
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/position_company_label"
            android:textColor="@color/colorAccent3"/>

        <EditText
            android:id="@+id/position_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_company_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/position_location_label"
            android:textColor="@color/colorAccent3"/>

        <EditText
            android:id="@+id/position_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_location_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/position_type_label"
            android:textColor="@color/colorAccent3"/>

        <Spinner
            android:id="@+id/position_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" />

        <TextView
            android:layout_width="match_parent"
...
            android:id="@+id/position_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/position_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_status_todo"/>
            <RadioButton
                android:id="@+id/position_inProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_status_inProgress"/>
            <RadioButton
                android:id="@+id/position_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_status_done"/>
        </RadioGroup>

        <TextView
...
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/position_description_label"
            android:textColor="@color/colorAccent3"/>

        <EditText
            android:id="@+id/position_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_description_hint"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/save_position_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_button"
                android:background="@color/colorWhite"
                android:textColor="@color/colorAccent"/>
...
