...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/positionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text=""
                    android:textColor="@color/home_date2"/>

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text=""
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/companyLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:textSize="18sp"
                    android:text=""/>

...
                        android:layout_alignParentStart="true"
                        android:id="@+id/position_type_text"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent3"/>

                    <TextView
                        android:id="@+id/positionType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Full-time"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/position_type_text"
                        android:layout_toEndOf="@+id/position_type_text"
...
                android:layout_height="40dp"
                android:id="@+id/favorite_button"
                android:textOn=""
                android:textOff=""/>

            <ImageButton
                android:id="@+id/edit_position_button"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/position_title"
                android:src="@android:drawable/ic_menu_edit" />

...
                android:paddingBottom="5dp"
                android:text="@string/position_status_text"
                android:textSize="16sp"
                android:textColor="@color/colorAccent3"/>

            <TextView
                android:id="@+id/positionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                tools:text="TODO"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/position_status_text"
                android:layout_toEndOf="@+id/position_status_text" />

        </RelativeLayout>

...
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:text="@string/position_description_label"
            android:textColor="@color/colorAccent3"/>

        <TextView
            android:id="@+id/positionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:text=""/>

...
